--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,10 @@
 /*@import '@angular/material/prebuilt-themes/pink-bluegrey.css';*/
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background: #CAC531;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F3F9A7, #CAC531);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F3F9A7, #CAC531); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    }
