--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -5,10 +5,16 @@
 
 .example-form {
   min-width: 150px;
-  max-width: 500px;
+  max-width: 600px;
   width: 100%;
 }
 
 .example-full-width {
   width: 100%;
+}
+
+app-weather {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  max-width: 600px;
 }
