--- a/src/app/dashboard/weather/weather.component.html
+++ b/src/app/dashboard/weather/weather.component.html
@@ -1,1 +1,21 @@
-{{data | json}}
+<mat-card class="example-card">
+    <mat-card-header class="card-container">
+      <mat-card-title-group>
+        <mat-card-title>{{data.name}}</mat-card-title>
+        <mat-card-subtitle>{{data.sys.country}}</mat-card-subtitle>
+        <mat-card-title>{{data.weather[0].description}}</mat-card-title>
+      </mat-card-title-group>
+      <mat-card-title-group>
+        <mat-card-title>{{data.main.temp | number:'1.0-0'}} °C</mat-card-title>
+        <mat-card-subtitle>Pressure: {{data.main.pressure}} hPa</mat-card-subtitle>
+        <mat-card-subtitle>Humidity: {{data.main.humidity}} %</mat-card-subtitle>
+      </mat-card-title-group>
+      <mat-card-title-group>
+        <mat-card-title>Min: {{data.main.temp_min | number:'1.0-0'}} °C</mat-card-title>
+        <mat-card-title>Max: {{data.main.temp_max | number:'1.0-0'}} °C</mat-card-title>
+      </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        <img mat-card-image src="./assets/moon.jpg" alt="Part of the day">
+    </mat-card-content>
+</mat-card>
