--- a/src/app/dashboard/weather/weather.component.html
+++ b/src/app/dashboard/weather/weather.component.html
@@ -16,6 +16,6 @@
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
-        <img mat-card-image src="./assets/moon.jpg" alt="Part of the day">
+        <img mat-card-image src="./assets/weather/moon.png" alt="Part of the day">
     </mat-card-content>
 </mat-card>
