--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,12 +1,16 @@
+
+
 .card {
     margin-top: 75px;
     min-width: 50%;
+    font-family: 'Poppins', sans-serif;
   }
 
 .example-form {
   min-width: 150px;
   max-width: 600px;
   width: 100%;
+  font-family: 'Poppins', sans-serif;
 }
 
 .example-full-width {
@@ -16,5 +20,6 @@
 app-weather {
   padding-top: 50px;
   padding-bottom: 50px;
-  max-width: 600px;
+  max-width: 500px;
 }
+
