--- a/src/app/dashboard/weather/weather.component.html
+++ b/src/app/dashboard/weather/weather.component.html
@@ -16,6 +16,7 @@
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
-        <img mat-card-image src="./assets/weather/moon.png" alt="Part of the day">
+        <!--<img mat-card-image src="./assets/weather/moon.png" alt="Part of the day">-->
+        <app-image *ngIf="data" [weatherGroup]="data.weather[0].id" [dayTime]="data.weather[0].icon"></app-image>
     </mat-card-content>
 </mat-card>
